--- a/pom.xml
+++ b/pom.xml
@@ -13,18 +13,37 @@
 		<jstl.version>1.2</jstl.version>
 	</properties>
 
-	<dependencies>
+	<dependencies> 
+	
+	<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+</dependency>
+	
+
+<dependency> 
+<groupId>javax.servlet</groupId> 
+<artifactId>javax.servlet-api</artifactId>  
+</dependency> 
+
+<dependency> 
+<groupId>javax.servlet.jsp</groupId> 
+<artifactId>javax.servlet.jsp-api</artifactId>  
+</dependency> 
+
+<dependency> 
+<groupId>javax.servlet</groupId> 
+<artifactId>jstl</artifactId>  
+</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>${jstl.version}</version>
 		</dependency>
 
 	</dependencies>
@@ -92,4 +111,38 @@
          </build>       
          </profile>     
          </profiles>    
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>5.1.6</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>3.0.1</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet.jsp</groupId>
+				<artifactId>javax.servlet.jsp-api</artifactId>
+				<version>2.3.1</version>
+			</dependency>  
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>jstl</artifactId>
+				<version>1.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>jstl</artifactId>
+				<version>${jstl.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
